# vision_ai_at_home

./: .gitignore  1_capturar_v2.py  2_preparar_dataset.py  3_entrenar.py  4_probar_camara.py  GUIA_CONCURSO.md  requirements.txt
dataset/key/labels/: key_0038.txt  key_0065.txt  key_0106.txt  key_0184.txt  key_0218.txt  key_0279.txt  key_0330.txt  key_0357.txt  key_0420.txt  key_0488.txt  key_0509.txt  key_0575.txt  key_0645.txt  key_0651.txt  key_0717.txt  key_0797.txt  key_0840.txt  key_0858.txt  key_0944.txt  key_0987.txt
dataset/key/labels_2/: key_0000.txt  key_0001.txt  key_0002.txt  key_0005.txt  key_0006.txt  key_0007.txt  key_0008.txt  key_0009.txt  key_0010.txt  key_0012.txt  key_0013.txt  key_0014.txt  key_0015.txt  key_0016.txt  key_0017.txt  key_0018.txt  key_0020.txt  key_0021.txt  key_0023.txt  key_0024.txt  key_0025.txt  key_0026.txt  key_0027.txt  key_0028.txt  key_0030.txt  key_0031.txt  key_0032.txt  key_0033.txt  key_0034.txt  key_0035.txt  key_0036.txt  key_0037.txt  key_0038.txt  key_0039.txt  key_0040.txt  key_0041.txt  key_0042.txt  key_0043.txt  key_0044.txt  key_0045.txt  (+813 more)
dataset/telefono/labels/: telefono_0033.txt  telefono_0096.txt  telefono_0125.txt  telefono_0155.txt  telefono_0238.txt  telefono_0277.txt  telefono_0343.txt  telefono_0380.txt  telefono_0432.txt  telefono_0475.txt  telefono_0536.txt  telefono_0592.txt  telefono_0606.txt  telefono_0679.txt  telefono_0708.txt  (+5 more)
src/vision_yolo_interfaces/: CMakeLists.txt  package.xml
src/vision_yolo_interfaces/msg/: DetectedObjects.msg
src/vision_yolo_ros2/: package.xml  setup.cfg  setup.py
(+4 files in other folders)
